# Robotic-Arm

./: .gitignore
.catkin_tools/profiles/default/: devel_collisions.txt
full_sampling_urdf/: CMakeLists.txt  package.xml
full_sampling_urdf/config/: joint_names_full_sampling_urdf.yaml
full_sampling_urdf/launch/: display.launch  gazebo.launch
full_sampling_urdf/meshes/: link_3.STL  link_6.STL
full_sampling_urdf/urdf/: full_sampling_urdf.csv  full_sampling_urdf.urdf
logs/gazebo_grasp_plugin/: build.cmake.000.log.stderr
logs/gazebo_test_tools/: build.cmake.001.log.stderr
movit_full_sampling/: .setup_assistant  CMakeLists.txt  package.xml
movit_full_sampling/config/: Bio_kinematics.yaml  full_sampling_urdf.srdf  joint_limits.yaml  joint_trajectory_controller.yaml  new_ros_controllers.yaml  ompl_planning.yaml  urdf.rviz
movit_full_sampling/launch/: arm.launch  full_sim.launch  gazebo.launch  move_group.launch  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  teleeop_control.launch
movit_full_sampling/scripts/: IKSolver.py  IKSolver_constrain.py  Inverse.py  Inverse_xyz.py  joint_translator.py
movit_full_sampling/urdf/: full_sampling_urdf.urdf
my_gazebo_models/: CMakeLists.txt  package.xml
my_gazebo_models/sampling_rocks/rock1/: model.config
my_gazebo_models/sampling_rocks/rock1/meshes/: rock1.stl
my_gazebo_models/sampling_rocks/rock2/: model.config  model.sdf
sampling_rover_with_arm_urdf/: package.xml
sampling_rover_with_arm_urdf/config/: joint_trajectory_controller.yaml
sampling_rover_with_arm_urdf/launch/: arm_urdf.launch  display.launch  gazebo.launch
sampling_rover_with_arm_urdf/meshes/: Right_ee.STL  base_arm.STL  link_1.STL  link_2.STL  link_4.STL  link_5.STL
sampling_rover_with_arm_urdf/scripts/: launch_full_sim_with_rocks.sh
src/full_sampling_urdf/config/: joint_names_full_sampling_urdf.yaml  joint_trajectory_controller.yaml
src/full_sampling_urdf/launch/: arm.launch
src/full_sampling_urdf/meshes/: Left_ee.STL  Right_ee.STL  base_arm.STL  link_1.STL  link_2.STL  link_3.STL  link_4.STL  link_5.STL
src/full_sampling_urdf/urdf/: full_sampling_urdf.urdf
src/movit_full_sampling/: .setup_assistant  CMakeLists.txt  package.xml
src/movit_new_arm/: .setup_assistant  CMakeLists.txt
src/movit_sampling_rover_arm/: .setup_assistant  CMakeLists.txt  package.xml
src/rock_detector/: CMakeLists.txt  package.xml
src/rover_arm_new_urdf/: CMakeLists.txt  package.xml
src/rover_arm_urdf_pkg/: CMakeLists.txt  package.xml
src/sampling_rover_with_arm_urdf/: CMakeLists.txt  package.xml
src/sampling_rover_with_arm_urdf/config/: joint_names_sampling_rover_with_arm_urdf.yaml  joint_trajectory_controller.yaml  teleop_controllers.yaml
src/sampling_rover_with_arm_urdf/launch/: arm_urdf.launch  rover_arm_urdf_rocks.launch  teleop_gazebo.launch
src/sampling_rover_with_arm_urdf/meshes/: Left_ee.STL  link_3.STL
src/sampling_rover_with_arm_urdf/scripts/: IKSolver.py  joint_translator.py  launch_full_sim_with_rocks.sh  launch_rover_with_rocks.sh
src/sampling_rover_with_arm_urdf/urdf/: sampling_rover_with_arm_urdf.csv  sampling_rover_with_arm_urdf.urdf
(+106 files in other folders)
