<?xml version="1.0"?>
<package format="2">
  <name>my_gazebo_models</name>
  <version>0.0.0</version>
  <description>Gazebo models package for custom environments and objects.</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>gazebo_ros</build_depend>
  <exec_depend>gazebo_ros</exec_depend>

  </package>